readme image added, minor fixes in cryptoBoard.js and index.html

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <div id='myModal'  class="modal">
             <div  class="modal-content">
                 <span class="close-button">&times;</span>
-                <h2>Please select the amount of gWei you want to send to: </h2>
+                <h2>Please select the amount of Ether you want to send to: </h2>
                 <span id="send_to" style="color:#ff724d"></span><br>
 
                 <input id="tip_amount"> ETH <br>
