--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
     </body>
     <footer>
-        <p id='myName' style="text-align: right; margin-right:5px;"> @2018  <a href='https://www.github.com/masaki1223' target="_blank">Masaki. </a> All Rights Reserved. </p>
+        <p id='myName' style="text-align: right; margin-right:5px;"> @2018  <a href='https://github.com/masaki1223/Decentralized-BBS' target="_blank">Masaki. </a> All Rights Reserved. </p>
     </footer>
 </html>
 
